fixed message text overflow

--- a/client/stylesheets/components/chat/chat.styl
+++ b/client/stylesheets/components/chat/chat.styl
@@ -42,5 +42,11 @@
             right 0
             width 70px
 
+    .collection .collection-item.avatar .secondary-content
+        top 12px
+
+    .message-item-p
+        word-break break-word
+
 .message-item-p
   white-space: pre
